# anima

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  404.html  AGENTS.md  CNAME  README.md  clientid.jsonld  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sw.js  vite.config.ts
.github/workflows/: ci.yml  e2e.yml
apps/backend/: package.json  tsconfig.json
apps/frontend/: .env.development  .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/native/: .gitignore  .oxlintrc.json  electrobun.config.ts  index.html  package.json  tsconfig.app.json  (+3 more)
apps/native/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/src/: main.rs
assets/: Browser-B0T5Fm2X.js  InruptAuthenticator.lazy-CiGq6TQF-DL7iW_HU.js  LegacyAuthenticator.lazy-2yIMoF2_-BfH4Bnk8.js  LocalRuntime-CAPHVtuR.js  RemoteRuntime-D6oEjJum.js  __vite-browser-external-D5pkBb-6.js  api-CFNzDWgJ.js  api-Sv6NZ__F.js  browser-CROxnMT1.js  browser-Wl3wB10p.js  build-DGpssRs1.js  dist-BBEwOOH4.js  dist-BM48-XwE.js  dist-BbjUi2yl.js  dist-Bh7wOQWS.js  dist-C1pF0ymh.js  dist-CqSqrLZS.js  dist-PHKxrUVx.js  dist-WH5QYsW2.js  dist-yGUA5oSa.js  en-BaRLOix9.js  env-D-AxkUpy.js  eruda-CQ_oswOW.js  eruda-indexeddb-ze27yBei.js  eruda-qkzLKlm-.js  index-B74JtwaI.css  index-Di6ePIit.js  patch-zod-DJXRLIqC.js  session-BxJLig_X.js  src-C3yQzciE.js
e2e/: package.json  playwright.config.ts  tsconfig.json
patches/: @inrupt__solid-client-authn-core.patch  @inrupt__solid-client-authn-node.patch
(+100 files in other folders)
