[package]
name = "anima"
version = "0.0.0"
description = "The AI that works for you"
authors = ["Noel De Martin"]
edition = "2021"

[lib]
name = "anima_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
